wrapped label in anchor element fixed bug where sort entries wouldn't be updated when switching to results view with new entries

--- a/css/reset.css
+++ b/css/reset.css
@@ -1,8 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
-
 body {
   margin: 0;
   min-height: 100vh;
@@ -15,4 +10,10 @@ button {
 
 a {
   all: unset;
+  display: block;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
